--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="quote_credit">Cuota del Crédito</string>
     <string name="quote_credit_hint">0.00</string>
     <string name="quote_credit_variable">Cuota del Crédito Variable</string>
+    <string name="list_save">Lista calculos almacenados</string>
     <string name="tax">Tasa</string>
     <string name="months">Meses</string>
     <string name="months_number_hint">000</string>
@@ -39,4 +40,6 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="delete_successfull">Se elimino correctamente</string>
+    <string name="dont_deleted">No se logro eliminar</string>
 </resources>
