--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="total_value">Valor total</string>
     <string name="save">Guardar</string>
     <string name="quote_credit_save">Guardar - Cuota Credito Fija</string>
+    <string name="quote_credit_save_variable">Guardar - Cuota Credito Variable</string>
     <string name="name">Nombre</string>
     <string name="cancel">Cancelar</string>
     <string name="dont_able_to_save">No se logro guardar</string>
