Ajustes de interfaces creando unas para manejo landscape
Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="interest_value">Valor a intereses</string>
     <string name="total_value">Valor total</string>
     <string name="save">Guardar</string>
+    <string name="add">Agregar</string>
     <string name="quote_credit_save">Guardar - Cuota Credito Fija</string>
     <string name="quote_credit_save_variable">Guardar - Cuota Credito Variable</string>
     <string name="name">Nombre</string>
