se realiza copia del codigo mientras se realiza codigo para realizar backup del codigo actual debido a que el nuevo codigo eliminara data de la anterior version, asi que toca implementar el backup primero antes de las nuevas funcionalidades
Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,7 +108,9 @@
     <string name="taxs_credit_card">Tasas de Tarjeta de Credito</string>
     <string name="recurrent">Recurrente</string>
     <string name="cash_advance">Avance de Dinero</string>
+    <string name="bough_wallet">Compra de cartera</string>
     <string name="sucursal_advance">Avance sucursal bancaria</string>
+    <string name="bough_wallet_generic">Compra de cartera</string>
 
     <string-array name="Months">
         <item>--- Seleccionar --- </item>
