--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -135,11 +135,12 @@
         <item>Diciembre</item>
     </string-array>
 
+    <string name="item_select">--- Seleccionar --- </string>
+    <string name="type_setting_does_not_record">No encontró registros con esta opción</string>
     <string-array name="CreditCardSettingType">
         <item>--- Seleccionar --- </item>
-        <item>Libre Inversion</item>
-        <item>Rediferir</item>
-        <item>Sin Intereses</item>
+        <item>1. Rediferir</item>
+        <item>2. Tasas Especiales</item>
     </string-array>
 
     <string name="_true">Si</string>
@@ -153,6 +154,9 @@
     <string name="toast_successful_insert">El registro se agrego exitosamente</string>
     <string name="toast_successful_update">El actualizo se agrego exitosamente</string>
     <string name="toast_invalid_option">Opción Invalida</string>
+
+    <string name="title_toolbar_fragment_list_credit_card_setting">Configuraciones</string>
+    <string name="title_toolbar_fragment_credit_card_setting">Configuración</string>
 
 
 
