--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,6 +61,7 @@
     <string name="do_you_want_to_delete_this_record">¿Desea eliminar el registro?</string>
     <string name="it_is_not_possible_log_in">No se logro realizar el inicio de session</string>
     <string name="email_address">Correo Electrónico</string>
+    <string name="there_are_not_data">No hay datos</string>
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
