--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,6 +108,9 @@
     <string name="interest_value_short">Interes</string>
     <string name="pending_to_pay_short">Pendiente</string>
     <string name="total_quote_value_short">Cuota</string>
+    <string name="total_quote">Cuota Total</string>
+    <string name="total_debt">Deuda Total</string>
+    <array name="num_credits">Número de Créditos</array>
 
     <string name="create_credit_card">Crear Nueva Tarjeta Credito</string>
     <string name="cut_off_day">Dia de Corte</string>
@@ -165,7 +168,7 @@
     <string name="toast_unsuccessful_insert">El registro no se agrego</string>
     <string name="toast_successful_update">El actualizo se agrego exitosamente</string>
     <string name="toast_invalid_option">Opción Invalida</string>
-
+    <string name="add_credit_card_setting">Agregar Configuración</string>
     <string name="title_toolbar_fragment_list_credit_card_setting">Configuraciones</string>
     <string name="title_toolbar_fragment_credit_card_setting">Configuración</string>
 
@@ -176,6 +179,8 @@
     <string name="additional_monthly">Adicional Mensual</string>
     <string name="additional_to_pay">Adicional a Pagar</string>
     <string name="additional_list">Lista Adicional</string>
+    <string name="num_additionals">Cantidad Adicionales</string>
+    <string name="tot_additionals">Total Adicionales</string>
     <string name="start_date">Fecha Inicio</string>
     <string name="end_date">Fecha Fin</string>
     <string name="date_bill">Fecha Facturacion</string>
@@ -209,6 +214,7 @@
     <string name="list_paid">Lista de Pagos</string>
     <string name="count">Cantidad</string>
     <string name="input">Ingreso</string>
+    <string name="num_inputs">Cantidad Ingresos</string>
     <string name="input_total">Total Ingresos</string>
     <string name="input_minus_output">Ingresos -  Pagos</string>
     <string name="input_list">Lista de Ingreso</string>
