--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -258,6 +258,9 @@
     <string name="check_payments_title">Pagos</string>
     <string name="to_pay">A Pagar</string>
 
+    <string name="yes">Si</string>
+    <string name="no">No</string>
+
     <string name="pick_option">Seleccionar Opción</string>
     <array name="credit_card_item_options">
         <item >Amortizacion</item>
@@ -285,6 +288,29 @@
 
     <array name="quote_save_item_options">
         <item >Amortizacion</item>
+        <item >Eliminar</item>
+    </array>
+
+    <array name="account_items_options">
+        <item >Ver</item>
+        <item >Eliminar</item>
+    </array>
+
+    <array name="list_credit_card_items_options">
+        <item >Editar</item>
+        <item >Eliminar</item>
+    </array>
+
+    <array name="setting_credit_card_items_options">
+        <item >Editar</item>
+        <item >Eliminar</item>
+    </array>
+
+    <array name="tax_items_options">
+        <item >Eliminar</item>
+    </array>
+
+    <array name="input_items_options">
         <item >Eliminar</item>
     </array>
 
