grace period on credit
testing a fix grace period, it work well

Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -345,5 +345,6 @@
     <string  name="grace_period_unsave">Periodo de gracia no fue guardado</string>
     <string  name="delete_grace_period_saved">Periodo de gracia eliminado sadisfactoriamente</string>
     <string  name="delete_grace_period_unsave">Periodo de gracia no fue eliminado</string>
+    <string name="differ_installment">Diferir el Capital Restante</string>
 
 </resources>
