Fix issues with dates
Fix error with dates in quote credit card and update values in background insted focus off

Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -359,4 +359,9 @@
     <string name="bought_year_invalid">El año es invalido entre 2010 hasta el actual año en curso</string>
     <string name="bought_month_invalid">Mes ingresado es invalido entre 01-12</string>
     <string name="bought_day_invalid">El dia ingresado no es valido entre 01-31</string>
+    <string name="name_credit_card_is_empty">El campo nombre de Tarjeta de Credito esta vacia</string>
+    <string name="cutoffday_value_invalid">Valor del dia de corte es invalido</string>
+    <string name="date_is_not_setting">Fecha no esta configurada</string>
+    <string name="value_product_is_not_setting">Valor del producto no esta configurada</string>
+    <string name="name_product_is_not_setting">El nombre del producto no esta configurada</string>
 </resources>
