fixed issue with timeout if fields when your are editing values, and showing save button when the validation fields is true, and fix issue with duplicate recurrent payment when it was ending the payment, and fix issue when payment differ quotes it duplicate record , issue with filter in query on end field in credit card for some reason it is not posible to validate date, there is a fix but we need to delete old code in 12 months when old date code does not working anymore
Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -333,7 +333,7 @@
     <string name="do_you_want_to_ending_recurrent_payment">¿Desea finalizar pago recurrente?</string>
     <string name="update_value_recurrent_paymner">Actualizar valor pago recurrente</string>
     <string name="dont_ending_recurrent_payment">No se logro finaliazr el pago recurrente</string>
-    <string name="ending_recurrent_payment_successfull">Se elimino correctamente</string>
+    <string name="ending_recurrent_payment_successfull">Se finalizo correctamente</string>
     <string name="theres_not_records_to_show_you">No hay registros para mostrar</string>
 
     <string name="pending_payable">Valor Pendiente</string>
