feature additional update values
Added new dialog to add extra value in amortization table

Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -377,4 +377,9 @@
     <string name="quote_1_item"># Compras 1 Cuota </string>
     <string name="see_more">Ver más</string>
     <string name="recap_bought_cc">Resumen de Compras con Tarjeta de Crédito</string>
+    <string name="num_quote"># Quote</string>
+    <string name="add_extra">Agregar Extra</string>
+    <string name="add_value_amortization_success">Valor Extra Agregado a la Cuota</string>
+    <string name="add_value_amortization_error">Valor Extra No fue Agregado</string>
+    <string name="error_less_or_equal_than_0_value">Valor menor a 0</string>
 </resources>
