feature refactor customDraw
Migrate complete recap and create piece of pie draw in compose y se arregla y generaliza los calculos del modulo user case para que los calculos estren centralziados y se ajusta en el codigo viejo malos calculos que se estaban realizando 1. no calculba el dinero pagado con los cash y wallet, 2 se tenian un mal mapeado en generacion de tasas y generaba otros valores y mas ajustes en calculos con esto se puede migrar a usercase ya que ya esta estable el calculo de cuotas

Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,6 +76,7 @@
     <string name="bought_made">Compra Realizada</string>
     <string name="product_name">Nombre Producto</string>
     <string name="product_value">Valor Producto</string>
+    <string name="product_value_short">Valor</string>
     <string name="bought_date_time">Fecha Compra</string>
     <string name="total_quotes">Cuotas Totales</string>
     <string name="bought_quotes">Cuotas Pagadas</string>
@@ -115,6 +116,7 @@
     <string name="pending_to_pay_short">Pendiente</string>
     <string name="total_quote_value_short">Cuota</string>
     <string name="total_quote">Cuota Total</string>
+    <string name="total">Total</string>
     <string name="total_debt">Deuda Total</string>
     <array name="num_credits">Número de Créditos</array>
 
