feature nmigration wallet bought credit card
migrate interface form of wallet bought with credit card , advance chash and credit card bought and the end it fix some issues found over date, plain buttons, new cache feature

Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,8 @@
     <string name="quote_credit_save">Guardar - Cuota Credito Fija</string>
     <string name="quote_credit_save_variable">Guardar - Cuota Credito Variable</string>
     <string name="name">Nombre</string>
+    <string name="add_input_account">Agregar Ingreso</string>
+    <string name="add_account">Agregar Cuenta</string>
     <string name="max_quotes">Cuotas Maximas</string>
     <string name="cancel">Cancelar</string>
     <string name="delete">Eliminar</string>
